# typed-trie

./: README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_trie.py
typed_trie/: __init__.py  trie.py
