[tool.poetry]
name = "typed-trie"
version = "0.1.0"
description = ""
authors = ["henadzit <henadzi.tsaryk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.2"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.352"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
