[tool.poetry]
name = "typed-trie"
version = "0.1.0"
description = "A pure Python implementation of a trie with typing."
authors = ["henadzit <henadzi.tsaryk@gmail.com>"]
readme = "README.md"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
license = "MIT"
repository = "https://github.com/henadzit/typed-trie"
keywords = ["trie"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.352"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
